feat: in services folders

--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
   "license": "MIT",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/jest/bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "check:lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "check:format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "check:typecheck": "tsc --noEmit -p ./tsconfig.json",
+    "check:all": "npm run check:lint && npm run check:format && npm run check:typecheck"
   },
   "engines": {
     "npm": ">=8.0.0",
