--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@swc/cli": "^0.3.9",
     "@swc/core": "^1.4.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.16",
