--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "class-validator": "^0.14.1",
     "jose": "^5.9.6",
     "jose-browser-runtime": "^5.9.6",
+    "jwk-to-pem": "^2.0.7",
+    "node-forge": "^1.3.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -61,7 +63,9 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jwk-to-pem": "^2.0.3",
     "@types/node": "^20.11.16",
+    "@types/node-forge": "^1.3.11",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/sequelize": "^4.28.20",
