--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cache-manager": "^6.3.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "crypto": "^1.0.1",
     "jose": "^5.9.6",
     "jose-browser-runtime": "^5.9.6",
     "jwk-to-pem": "^2.0.7",
