--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "check:lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "check:format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "check:typecheck": "tsc --noEmit -p ./tsconfig.json",
-    "check:all": "npm run check:lint && npm run check:format && npm run check:typecheck"
+    "check:all": "npm run check:lint && npm run check:format && npm run check:typecheck",
+    "gen:priv:key": "openssl genpkey -algorithm RSA -out private_key.pem -pkeyopt rsa_keygen_bits:2048",
+    "gen:pub:key": "openssl rsa -pubout -in private_key.pem -out public_key.pem"
   },
   "engines": {
     "npm": ">=8.0.0",
@@ -31,6 +33,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.4",
     "@nestjs/swagger": "^7.4.2",
+    "app-root-path": "^3.1.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
