--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/swagger": "^7.4.2",
     "app-root-path": "^3.1.0",
     "axios": "^1.7.9",
+    "base64url": "^3.0.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cache-manager": "^6.3.2",
